objects/Group_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>ASO_Newborn_Opt_Out_Indicator__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>To allow ASO groups to Opt-Out of the Fully Insured mandate to cover newborns for the first 31 days following birth, regardless of whether or not the newborn is physically enrolled.</inlineHelpText>
        <label>ASO Newborn Opt-Out Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, the group opts out</fullName>
                </value>
                <value>
                    <fullName>No, the group does not opt out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Preferences</relationshipLabel>
        <relationshipName>Group_Preferencess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Creditable_Coverage_Suppr__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Proof of prior coverage with Anthem</inlineHelpText>
        <label>Cert. of Creditable Coverage Suppression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, we will not send proof of prior coverage</fullName>
                </value>
                <value>
                    <fullName>No, we will send proof of prior coverage</fullName>
                    <default>true</default>
                    <label>No, we will send proof of prior coverage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Letter_Suppression__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Letter that offers additional coverage to someone who has exhausted their group plan</inlineHelpText>
        <label>Conversion Letter Suppression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, we will not send letter to the member</fullName>
                </value>
                <value>
                    <fullName>No, we will send letter to the member</fullName>
                    <default>true</default>
                    <label>No, we will send letter to the member</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delinquency_Cancellation_Letter_Suppress__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Informs Group that they are in a delinquency status and may cancel for non-payment if premium is not received.</inlineHelpText>
        <label>Delinquency Cancellation Ltr Suppression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, we will not send delinquency letter to group</fullName>
                </value>
                <value>
                    <fullName>No, we will send delinquency letter to group</fullName>
                    <default>true</default>
                    <label>No, we will send delinquency letter to group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Anthem_Generate_HCID__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Identifies if the member’s HCID is assigned by Anthem or the client.</inlineHelpText>
        <label>Does Anthem Generate HCID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem Supplied</fullName>
                    <default>true</default>
                    <label>Anthem Supplied</label>
                </value>
                <value>
                    <fullName>Client Supplied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out_of_LHO_URL_on_ID_Cards__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Determines if the employer wants to include the livehealthonline.com link on the member ID cards. (Medical Only.) This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Opt-Out of LHO URL on ID Cards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No - Place Live Health Online URL on ID Card</fullName>
                    <default>true</default>
                    <label>No - Place Live Health Online URL on ID Card</label>
                </value>
                <value>
                    <fullName>Yes - Do Not Place Live Health Online URL on ID Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Letter_Suppression__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Informs member that Anthem is cancelling the group coverage for non-payment</inlineHelpText>
        <label>Termination Letter Suppression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, we will not send letter to the member</fullName>
                </value>
                <value>
                    <fullName>No, we will send letter to the member</fullName>
                    <default>true</default>
                    <label>No, we will send letter to the member</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Washout_Code__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Washout Code determines if first month premium is billed or not, and if last month premium is credited or not when coverage is terminated.</inlineHelpText>
        <label>Washout Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(01) 1st through 31st - 1st of the following month</fullName>
                    <label>1st through 31st - 1st of the following month</label>
                </value>
                <value>
                    <fullName>(02) 1st only of the same month; 2nd through 31st - 1st of following month</fullName>
                    <label>1st only of the same month; 2nd through 31st - 1st of following month</label>
                </value>
                <value>
                    <fullName>(16) 1st through 15th - 1st of same month; 16th through 31st of following month (or ASO group)</fullName>
                    <label>1st through 15th - 1st of same month; 16th through 31st of following month (or ASO group)</label>
                </value>
                <value>
                    <fullName>(31) 1st through 31st - 1st of same month</fullName>
                    <label>1st through 31st - 1st of same month</label>
                </value>
                <value>
                    <fullName>(31) COVA/TLC/LODA/VA tech</fullName>
                    <label>COVA/TLC/LODA/VA tech</label>
                </value>
                <value>
                    <fullName>(16) Georgia - HMO/POS medical products and no COBRA solutions</fullName>
                    <label>Georgia - HMO/POS medical products and no COBRA solutions</label>
                </value>
                <value>
                    <fullName>(blank) Georgia - Multiple medical products, or includes Specialty Products and COBRA solutions</fullName>
                    <label>Georgia - Multiple medical products, or includes Specialty Products and COBRA solutions**</label>
                </value>
                <value>
                    <fullName>(blank) Standard - Premium prorated based on 30-day billing cycle**</fullName>
                    <label>Standard - Premium prorated based on 30-day billing cycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Preferences</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GRPPREF-{0000}</displayFormat>
        <label>Group Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>